- Normalize plane wave source by simulation and set the Bloch vectory correctly [@ludi1001]

## 2019-09-02
### Changed
- Grating parametrization allows the grating specification to be inverted so that the first edge is a falling edge [@ludi1001]
- Grating parametrization constraints allows the constraint between the boundary of design area and first/last grating edge to be controlled [@ludi1001]

## 2019-10-16
### Changed
- Grating example has more features: GDS generation, foreground/background GDS generated programmatically, minimize backreflection objective [@ludi1001]

## 2020-03-06
### Added
- Allow using environment variable MAXWELL_SERVER to control Maxwell server location [@ludi1001]

### Changed
- Upgraded to gdspy 1.4+ [@ludi1001]
- Correctly include loss from custom material loading [@ludi1001]

## 2020-03-29
### Added
- Initial goos commits [@ludi1001]

### Changed
- Allow Gaussian beam source center to be defined outside of simulation region [@jskarda]
- Make grating coupler example broadband [@nvsapra]

## 2020-04-10
### Added
- (invdes) Discreteness penalty for direct parametrizations [@nvsapra]
- (goos) Array slicing function [@vcruysse]
- Dipole source [@vcruysse]

## 2020-04-20
### Added
- (invdes) Custom overlap function [@nvsapra]

## 2020-04-23
### Added
- (goos) Add ability to resume plan [@ludi1001]
- (goos) Add autorun feature to optimization plan [@ludi1001]
- (invdes) CubicParam generates GDS [@ludi1001]

### Changed
- (goos) Nodes are added immediately to plan upon creation [@ludi1001]

## 2020-06-02
### Added
- (goos) Schema registration system introduced to make solver extensions easier [@ludi1001]

### Changed
- (goos) Allow solver info specification in Maxwell solver [@ludi1001]
- (goos) Refactor Maxwell solver to use schema registration [@ludi1001]

## 2020-06-04
### Added
- (goos) Colab examples [@jskarda, @gahn]

## 2020-06-07
### Changed
- Fix cubic parametrization GDS bug that scaled polygons by factor of 2 [@ludi1001]